--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@assets/*"    : ["src/assets/*"],
-      "@screens/*"   : ["src/screens/*"],
+      "*": ["src/*"]
     }
   }
 }
