--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.2.0",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.0",
+    "@types/uuid": "^9.0.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
