--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -20,7 +21,6 @@
     "react": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
-    "react-native-currency-input": "^1.1.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -28,8 +28,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "zod": "^3.21.4",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
