--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
@@ -35,6 +36,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
