--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "e-conomize",
-    "slug": "e-conomize-mobile",
+    "name": "economize",
+    "slug": "economize",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/Icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./src/assets/SplashScreen.png",
       "resizeMode": "contain",
@@ -19,12 +19,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/AdpativeIcon.png",
+        "foregroundImage": "./src/assets/AdaptiveIcon.png",
         "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./src/assets/favicon.png"
+      },
+      "package": "com.naceja.economize"
     },
     "extra": {
       "eas": {
